@@ -47,14 +47,12 @@ public class SessionPersistentRegistry implements SessionRegistry {
         List<SessionInformation> sessionInformations = new ArrayList<>();
         String principalName = null;
 
-        if (principal instanceof UserDetails detailsUser) {
-            principalName = detailsUser.getUsername();
-        } else if (principal instanceof OAuth2User oAuth2User) {
-            principalName = oAuth2User.getName();
-        } else if (principal instanceof CustomSaml2AuthenticatedPrincipal saml2User) {
-            principalName = saml2User.name();
-        } else if (principal instanceof String stringUser) {
-            principalName = stringUser;
+        switch (principal) {
+            case UserDetails detailsUser -> principalName = detailsUser.getUsername();
+            case OAuth2User oAuth2User -> principalName = oAuth2User.getName();
+            case CustomSaml2AuthenticatedPrincipal saml2User -> principalName = saml2User.name();
+            case String stringUser -> principalName = stringUser;
+            default -> {}
         }
 
         if (principalName != null) {
@@ -78,14 +76,12 @@ public class SessionPersistentRegistry implements SessionRegistry {
     public void registerNewSession(String sessionId, Object principal) {
         String principalName = null;
 
-        if (principal instanceof UserDetails detailsUser) {
-            principalName = detailsUser.getUsername();
-        } else if (principal instanceof OAuth2User oAuth2User) {
-            principalName = oAuth2User.getName();
-        } else if (principal instanceof CustomSaml2AuthenticatedPrincipal saml2User) {
-            principalName = saml2User.name();
-        } else if (principal instanceof String stringUser) {
-            principalName = stringUser;
+        switch (principal) {
+            case UserDetails detailsUser -> principalName = detailsUser.getUsername();
+            case OAuth2User oAuth2User -> principalName = oAuth2User.getName();
+            case CustomSaml2AuthenticatedPrincipal saml2User -> principalName = saml2User.name();
+            case String stringUser -> principalName = stringUser;
+            default -> {}
         }
 
         if (principalName != null) {
@@ -193,6 +189,6 @@ public class SessionPersistentRegistry implements SessionRegistry {
         allSessions.sort((s1, s2) -> s2.getLastRequest().compareTo(s1.getLastRequest()));
 
         // The first session in the list is the latest session for the given principal name
-        return Optional.of(allSessions.get(0));
+        return Optional.of(allSessions.getFirst());
     }
 }
